[gd_scene load_steps=22 format=3 uid="uid://chrpr5jqt2khs"]

[ext_resource type="Script" path="res://scenes/game_object/enemies/rat/rat.gd" id="1_ah3cx"]
[ext_resource type="PackedScene" uid="uid://diq0ksf1jk0" path="res://scenes/component/random_audio_player_2d_component.tscn" id="2_2dq5u"]
[ext_resource type="PackedScene" uid="uid://cxr7r8lu6oe7y" path="res://scenes/component/health_component.tscn" id="2_co0pl"]
[ext_resource type="PackedScene" uid="uid://b1t3qmtil0nvp" path="res://scenes/component/vial_drop_component.tscn" id="3_25xii"]
[ext_resource type="AudioStream" uid="uid://dwp6dck2v0r3n" path="res://assets/audio/hit_000.ogg" id="3_g26gm"]
[ext_resource type="AudioStream" uid="uid://bd51qy8ulp74n" path="res://assets/audio/hit_001.ogg" id="4_40xny"]
[ext_resource type="PackedScene" uid="uid://bw0mb15jrgilp" path="res://scenes/component/velocity_component.tscn" id="4_cpoba"]
[ext_resource type="PackedScene" uid="uid://4ljnqknkpg5r" path="res://scenes/component/death_component.tscn" id="4_wc4ql"]
[ext_resource type="PackedScene" uid="uid://ckbkksdk7rjau" path="res://scenes/component/hurt_box_component.tscn" id="5_2mkwl"]
[ext_resource type="AudioStream" uid="uid://vegoymwgqxww" path="res://assets/audio/hit_002.ogg" id="5_etd3a"]
[ext_resource type="Texture2D" uid="uid://cp6iukrlmk5jx" path="res://scenes/game_object/enemies/rat/rat.png" id="6_5txjw"]
[ext_resource type="AudioStream" uid="uid://can2mmmhgv5mt" path="res://assets/audio/hit_003.ogg" id="6_f81jm"]
[ext_resource type="PackedScene" uid="uid://c7yoch83br74m" path="res://scenes/component/hit_flash_component.tscn" id="6_plgnk"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="7_t24ts"]
[ext_resource type="AudioStream" uid="uid://chbifh3bj3sea" path="res://assets/audio/hit_004.ogg" id="7_yxps7"]

[sub_resource type="Animation" id="Animation_ndbms"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_r0jdt"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajh1e"]
_data = {
"RESET": SubResource("Animation_ndbms"),
"walk": SubResource("Animation_r0jdt")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_khx1j"]
resource_local_to_scene = true
shader = ExtResource("7_t24ts")
shader_parameter/brightness = 2.08165e-12

[sub_resource type="CircleShape2D" id="CircleShape2D_khgdg"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1fhha"]
radius = 5.0

[node name="Rat" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_ah3cx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ajh1e")
}
autoplay = "walk"

[node name="RandomAudioPlayer2DComponent" parent="." instance=ExtResource("2_2dq5u")]
streams = Array[AudioStream]([ExtResource("3_g26gm"), ExtResource("4_40xny"), ExtResource("5_etd3a"), ExtResource("6_f81jm"), ExtResource("7_yxps7")])

[node name="HealthComponent" parent="." instance=ExtResource("2_co0pl")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_25xii")]
drop_percent = 1.0
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_cpoba")]

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_wc4ql")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_plgnk")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_khx1j")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("5_2mkwl")]
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(2.08165e-12, -5)
shape = SubResource("CircleShape2D_khgdg")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("6_5txjw")
offset = Vector2(2.08165e-12, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, -5)
shape = SubResource("CircleShape2D_1fhha")
